--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:gravity="center"/>
 
     <Button
+        android:id="@+id/inputNameBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="다른 화면에서 입력 받아 오기"/>
