닉네임 연습문제 풀이

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,18 @@
         android:layout_height="wrap_content"
         android:text="다른 화면에서 입력 받아 오기"/>
 
+    <TextView
+        android:id="@+id/nickNameTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="닉네임 입력값 자리"
+        android:gravity="center" />
+
+    <Button
+        android:id="@+id/nickNameBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="다른 화면에서 입력 받아 오기"/>
+
 </LinearLayout>
